# MiniISA

./: .gitignore  NOTES  README.md  meson.build  meson_options.txt
examples/: apowbmodc.min  func.min  generate_test.py  tokens.min
include/: config.h.in  extra.h  meson.build
include/_private/minias/: parser.h  prebytecode.h  token.h  tokenizer.h
include/_private/miniisa/: data.h  extra.h  strnlen.h
include/miniisa/: bytecode.h  data.h  extra.h  instruction.h  meson.build  permissions.h  section.h  strnlen.h  symbol.h
src/minias/: main.c  meson.build  parser.c  parser.h  prebytecode.c  prebytecode.h  token.c  token.h  tokenizer.c  tokenizer.h
src/miniisa/: bytecode.c  data.c  instruction.c  meson.build  section.c  symbol.c
tests/fodder/: big_example.min  one_liner.min
tests/include/_test/: config.h.in  meson.build
tests/minias/: meson.build  test_token.cpp  test_tokenizer.cpp
